--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+form {
+  margin-bottom: 50px;
+}
+
+form * {
+  display: block;
+  margin: 15px;
+  padding: 5px;
+}
